<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.SignUpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View

                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/colorPrimary"
                android:fitsSystemWindows="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/ic_wave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

            <ImageView
                android:id="@+id/activityRegister_icon_user"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/ic_assignment"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/shape_fragment_sign_up_liner_layout"
                android:orientation="vertical"
                android:id="@+id/container11"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:elevation="@dimen/_10sdp"
                android:padding="@dimen/_1sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_sign_up_TextView_container"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/shape_fragment_sign_up_liner_layout"
                    android:textSize="@dimen/_24ssp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_signUp_EitText_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_icon_email1"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/fragment_sign_up_EitText_email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_20sdp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_signUp_EitText_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_icon_key"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/fragment_sign_up_EitText_password"
                        android:inputType="textPassword"
                        android:padding="@dimen/_20sdp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_signUp_EitText_ConfirmPassword1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_check"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/fragment_sign_up_EitText_ConfirmPassword"
                        android:inputType="textPassword"
                        android:padding="@dimen/_20sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/fragment_signUp_Button_save"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/fragment_signUp_Button_save"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20ssp"
                    app:cornerRadius="@dimen/_10sdp" />
                <Button
                    android:id="@+id/fragment_signUp_Button_back_signIn"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/fragment_sign_in_Button_login"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20ssp"
                    app:cornerRadius="@dimen/_10sdp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>